# Toob-Loader

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.bat  build_err.txt  configure.py  export_full.ps1  export_libtoob.ps1  full_review_export.txt  libtoob_review_export.txt  scratch_cleanup_includes.py  scratch_cmake.py  scratch_failfast_manifest.py  scratch_replace_includes.py  tree.txt  tree_commit.txt
.agents/workflows/: doublecheck.md  files-position.md  planning.md  spec-driven-extraction.md
.github/workflows/: ci.yml  oracle-semver.yml  release-cli.yml  release-compiler.yml  release-core.yml  release.yml
ai_history/: remote_file_cache.json
archive/toobfuzzer3/: chips.json  patch_json_run84.py  pipeline_core.py  test_mmu.py  toobfuzzer_gui.py
archive/toobloader/: .env  toobl.bat
archive/toobloader/recovery/: CMakeLists.txt  panic_main.c
bootloader/core/: boot_delta.c  boot_energy.c  boot_journal.c  boot_main.c  boot_multiimage.c  boot_panic.c  boot_rollback.c  boot_secure_zeroize_host.c  boot_state.c  boot_swap.c
bootloader/stage0/: stage0_boot_pointer.c  stage0_tentative.c
cli/: configure.py  publisher-workflow.yml  pyproject.toml
cli/_reference_python/commands/: build.py
cli/_reference_python/core/: installer.py  paths.py  registry_cache.py
cli/examples/manifests/: device.toml
cli/manifest_compiler/: toob_manifest.py
cli/publisher/: Dockerfile  docker-compose.yml  entrypoint.sh  hooks.json
cli/suit/: generate.sh  test.c  test.cddl  test.h  test.py  test_types.h  toob_suit.cddl
cli/toob/: __init__.py  __main__.py  cli.py
cli/toob-cli/: go.mod  go.sum  main.go
cli/toob-cli/cmd/: abi.go  budget.go  build.go  chip.go  clean.go  doctor.go  init.go  manifest.go  registry.go  root.go  update.go
cli/toob-cli/internal/abi/: abidiff.go  abidiff_test.go
cli/toob-cli/internal/installer/: installer.go
cli/toob-cli/internal/lockfile/: lockfile.go
cli/toob-cli/internal/manifest/: allocator.go  budget.go  generator.go  manifest.go  types.go
cli/toob-cli/internal/paths/: paths.go
cli/toob-cli/internal/registry/: cache.go  zip.go
cli/toob-cli/internal/scaffold/: baremetal.go  espidf.go  scaffold.go  zephyr.go
cli/toob-cli/internal/suit/: generator.go
cli/toob-cli/internal/toolchain/: manager.go
cli/toob-cli/internal/updater/: updater.go
cli/toob.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cli/toob/commands/: __init__.py  chip.py  registry.py
cli/toob/core/: lockfile.py  paths.py  registry_cache.py
cmake/: toob_core.cmake  toob_crypto.cmake  toob_hal.cmake  toob_libtoob.cmake  toob_stage0.cmake  toolchain-arm-none-eabi.cmake  toolchain-host.cmake  toolchain-riscv32.cmake  toolchain-xtensa-esp.cmake
core/: boot_confirm.c  boot_crc32.c  boot_delay.c  boot_delta.c  boot_diag.c  boot_energy.c  boot_journal.c  boot_main.c  boot_merkle.c  boot_multiimage.c  boot_panic.c  boot_rollback.c  boot_secure_zeroize.S  boot_secure_zeroize_host.c  boot_state.c  boot_swap.c  boot_verify.c
docs/: aggregated_scan.json  concept_fusion.md  dev_diary.md  dev_plan.md  getting_started.md  hals.md  implementation_backlog.md  index.md  libtoob_api.md  lol.md  merkle_spec.md  ota_network_integration_gap_analysis.md  ota_network_stack_gap_analysis.md  ota_networking_architecture.md  ota_networking_architecture_gap_analysis.md  provisioning_guide.md  sandbox_setup.md  stage_1_5_spec.md  structure_plan.md  testing_requirements.md  toob_hub_api.md  toob_telemetry.md  toobfuzzer_integration.md
libtoob/: toob_confirm.c  toob_crc32.c  toob_diag.c  toob_handoff.c  toob_ota.c  toob_update.c  toob_wal_naive.c
manifest_compiler/: budget_check.py  toob_manifest.py
manifests/: device.toml
os_client/: CMakeLists.txt  Kconfig  idf_component.yml
os_client/include/: toob_network_client.h
os_client/src/: rtos_glue_espidf.c  rtos_glue_zephyr.c  rtos_http_espidf.c  rtos_http_zephyr.c  rtos_stub_posix.c  toob_network_client.c
os_client/zephyr/: Kconfig
scripts/: build.bat
stage0/: stage0_boot_pointer.c  stage0_hash.c  stage0_main.c  stage0_otp.c  stage0_tentative.c  stage0_verify.c
suit/: generate.sh  toob_suit.cddl  toob_telemetry.cddl
tmp_go_out/: generated_boot_config.h  generated_memory.ld  stage0_layout.ld
tmp_py_out/: generated_boot_config.h
toobfuzzer3/: patch_json_run84.py  pipeline_core.py  toobfuzzer_gui.py
toobloader/: .gitignore  CMakeLists.txt  README.md  toobl
toobloader/arch/arm/: boot_arch_arm.c
toobloader/chip/esp/common/: boot_flash_esp_rom.c
toobloader/chip/esp/esp32/: boot_hal_esp32.c
toobloader/chip/esp/esp32/ld/: esp32.ld
toobloader/chip/esp/esp32c3/ld/: esp32c3.ld
toobloader/chip/esp/esp32c6/: boot_hal_esp32c6.c
toobloader/chip/esp/esp32c6/ld/: esp32c6.ld
toobloader/chip/esp/esp32s2/: boot_hal_esp32s2.c
toobloader/chip/esp/esp32s2/ld/: esp32s2.ld
toobloader/chip/esp/esp32s3/ld/: esp32s3.ld
toobloader/chip/nrf/nrf52/: boot_hal_nrf52.c
toobloader/chip/stm/common/: boot_hal_stm32_f4_family.c
toobloader/chip/stm/stm32h7/: boot_hal_stm32h7.c
toobloader/chip/stm/stm32l5/: boot_hal_stm32l5.c
toobloader/core/: boot_delay.c  boot_delta.c  boot_journal.c  boot_merkle.c  boot_multiimage.c  boot_state.c  boot_verify.c
toobloader/core/include/: boot_delay.h  boot_energy.h  boot_multiimage.h  boot_swap.h  boot_verify.h
toobloader/crypto/sha256/: sha256.c
toobloader/docs/: architecture_tags.md  llm_semantic_context.json
toobloader/docs/ideas/: idea.txt
toobloader/hal/chips/esp32c6/: chip_manifest.json
toobloader/include/: boot_arch.h  boot_config.h  boot_swap.h
toobloader/include/common/: kb_tags.h  rp_assert.h
toobloader/mocks/: dev_policy.c
toobloader/ports/zephyr/: toob_zephyr_shim.c
toobloader/scripts/: build_all.py  build_standalone.py  targets.json  toobcrypt.py
toobloader/scripts/toolchains/: __init__.py  espressif.py  generic.py
toobloader/src/: boot_main.c  signature_verify.c
toobloader/src/common/: rp_stdlib.c
toobloader/stage0/: stage0_hash.c  stage0_main.c
toobloader/tests/: generate_c_vector.c  test_chacha20_math.py
(+542 files in other folders)
