[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toob"
version = "0.1.0"
description = "Hardware Package Manager for the Toob-Boot ecosystem"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
toob = "toob.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["toob*"]
